# fe3

./: Cargo.toml  README
anagram/.exercism/: metadata.json
anagram/src/: lib.rs
beer-song/.exercism/: metadata.json
beer-song/src/: lib.rs
benches/: my_benchmark.rs
clock/.exercism/: metadata.json
clock/src/: lib.rs
concurrency/: Cargo.toml
concurrency/src/: main.rs
fe3/: Cargo.toml
iterators/: Cargo.toml
iterators/src/: main.rs
nth-prime/: Cargo.toml
nth-prime/.exercism/: metadata.json
nth-prime/src/: lib.rs
nth-prime/tests/: nth-prime.rs
proverb/src/: lib.rs
raindrops/.exercism/: metadata.json
raindrops/src/: lib.rs
rust-book/smart-pointers/: Cargo.toml
space-age/.exercism/: metadata.json
space-age/src/: lib.rs
src/: enums.rs  from_iters.rs  lib.rs  macros.rs  main.rs  num_fmt.rs  sierpinski.rs  threads.rs
sublist/.exercism/: metadata.json
sublist/src/: lib.rs
sublist/tests/: sublist.rs
