[package]
authors = ["Shohei Jinno <shohei.jinno@gmail.com>"]
edition = "2018"
name = "fe3"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencher = "0.1.5"
perf-event = "0.4.6"
rand = "0.8.0"
termion = "1.5.6"

[dev-dependencies]
criterion = "0.3"

[[bench]]
harness = false
name = "my_benchmark"
